방명록 병합 완료

--- a/cyworld/src/main/webapp/resources/css/main.css
+++ b/cyworld/src/main/webapp/resources/css/main.css
@@ -68,6 +68,7 @@
 padding: .8em .5em; 
 border: 1px solid #999;
 font-family: inherit;  
+/* 이미지 경로 설정 방식 */
 background: url("../images/arrow.png") no-repeat 95% 50%;
 border-radius: 0px; 
 -webkit-appearance: none; 
