--- a/cyworld/src/main/webapp/resources/css/nonMain.css
+++ b/cyworld/src/main/webapp/resources/css/nonMain.css
@@ -49,7 +49,7 @@
         overflow: hidden;
    } 
    /* item position */
-   .item { width:100px; height: 25px; background: linear-gradient(120deg, rgb(192, 192, 192) 5% , white );border-radius: 50px; position: relative; margin-bottom: 80px; left: 480px; top: -640px; border: 1px solid rgba(0, 0, 0, 0.178); box-shadow: 10px 10px  20px rgba(0, 0, 0, 0.356); 
+   .item { width:100px; height: 25px; background: linear-gradient(120deg, rgb(192, 192, 192) 5% , white );border-radius: 50px; position: relative; margin-bottom: 80px; left: 550px; top: -640px; border: 1px solid rgba(0, 0, 0, 0.178); box-shadow: 10px 10px  20px rgba(0, 0, 0, 0.356); 
     z-index: 10;}
     .item2 { top:-500px;}
 
@@ -90,16 +90,16 @@ z-index: 0;
         top:360px; left:1165px;
         width:300px; height: 350px;}
     
-        .container:hover .womanAni { animation: woman-ani 1s .5s linear forwards; }
+        .container:hover .womanAni { animation: woman-ani 1s forwards; }
     
     @keyframes woman-ani {
    0% { transform: translateX(0); }
-   100% { transform: translateX(-350px); }
+   100% { transform: translateX(-300px); }
 }
 /* minimi */
 .leftMinimiPosition { position:absolute; width:440px; height: 380px;  top:400px; left: 50px; z-index: 10;} 
 .leftMinimiPosition > pre {position:absolute; top:290px;
-left:-20px;
+left:-60px;
 }
 .leftMinimiPosition>.noneMain1 {position: absolute; top:290px; width:100px; left:10px;
 }
