--- a/cyworld/src/main/webapp/resources/css/diary.css
+++ b/cyworld/src/main/webapp/resources/css/diary.css
@@ -75,7 +75,7 @@ left:50px;
 
   /* right content */
 .title { position: relative; left: 80px; top:27px; 
-   font-size: 18px; font-weight: bold;  color: skyblue; }
+   font-size: 24px; font-weight: bold;  color: skyblue; }
 
    
 /* music */
@@ -152,8 +152,8 @@ left:50px;
 #main_box > h1 { font-size: 48px; margin-top: 4px; margin-left: 20px;}
 
 .diary_box { margin-top: 100px; margin-left: 43px;
-width:1070px; height: 300px; border: 3px solid black;
-border-radius: 30px; overflow-x:hidden; overflow-y:auto;
+width:1070px; height: 400px; border: 3px solid black;
+border-radius: 30px; overflow:hidden; 
 }
 
 .top_section { width:1070px; height: 40px; background-color: lightgray; 
@@ -164,13 +164,18 @@ border-radius:  30px 30px 0 0;
 .top_section > p { padding-top: 5px; margin-left: 20px;}
 #contentNum {border: none; background-color: lightgrey; font-size: 20px; }
 .date { margin-left: 420px; margin-top: 15px;}
+
 .diaryContent { margin-left: 20px; margin-top: 20px;
-line-height: 25px; 
+
 }
-.modify { width:80px; height: 30px; margin-top: 180px;
+.diaryContent > textarea 
+{ width:800px; height: 330px; border: none; line-height: 40px; 
+font-size:20px;}
+
+.modify { width:80px; height: 30px; margin-top: 280px;
 margin-left: 880px;
 }
-.delete { width:80px; height: 30px; margin-top: 180px;
+.delete { width:80px; height: 30px; margin-top: 280px;
 margin-left: 970px;
 }
 
@@ -239,4 +244,20 @@ display: flex;
 
 #scrollBar::-webkit-scrollbar-track {
     background: rgba(141, 184, 244, 0.481);  /*스크롤바 뒷 배경 색상*/
+}
+
+ /* text scroll-bar */
+#scrollBar1::-webkit-scrollbar {
+    width: 8px;  /* 스크롤바의 너비 */
+}
+
+#scrollBar1::-webkit-scrollbar-thumb {
+    height: 30%; /* 스크롤바의 길이 */
+    background: #c5cfdd; /* 스크롤바의 색상 */
+    
+    border-radius: 10px;
+}
+
+#scrollBar1::-webkit-scrollbar-track {
+    background: rgb(186 186 187 / 48%);  /*스크롤바 뒷 배경 색상*/
 }
