--- a/cyworld/src/main/webapp/resources/css/gallery.css
+++ b/cyworld/src/main/webapp/resources/css/gallery.css
@@ -10,7 +10,7 @@
             background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
             background-position: -2px -2px, -2px -2px, -1px -1px, -1px -1px;
   	overflow:hidden;
-  	top:30px;  
+  	top:50px;  
         }
    /* position */
    .container { 
@@ -21,7 +21,7 @@
     border-radius: 100px;
     display: flex;
     position: relative;
- 
+ 	top:30px;
    }
     .left-section { width:30%; background-color: rgb(158, 218, 241); border-radius: 80px; }
     .right-section { width:70%; background-color: rgb(158, 218, 241); border-radius: 80px; position: relative;  }  
@@ -75,7 +75,7 @@ left:50px;
   
   /* right content */
 .title { position: relative; left: 80px; top:27px; 
-   font-size: 18px; font-weight: bold;  color: skyblue; }
+   font-size: 24px; font-weight: bold;  color: skyblue; }
    /* .titleLink { position: relative; left: 930px; top:3px; 
    font-size: 18px; font-weight: bold;} */
    
@@ -131,7 +131,8 @@ border-top: none;  display: flex;
    .myVideo { margin-top:10px;  width: 400px; height: 480px;  }
   .type_gallerycontent {width:900px; height: 300px;  border: 3px solid black; 
 border-top: none; position: relative;}
-.type_gallerycontent > pre {font-size:30px; line-height:70px; margin-left:10px;}
+.type_gallerycontent > pre { margin-left:10px;}
+.galleryContent{  margin-top:20px; width:750px;  height: 240px; font-size:30px; line-height:70px;  border:none;}
 .like {   text-align: right;  }
 .changeBtn {text-align: right;}
 .myButton { width:360px; height: 100px; margin-left: 530px; 
@@ -207,7 +208,7 @@ border:  1px solid black; display: flex;
 
 /* button */
 
-        #btn-cover {  border: 1px solid #486ae3;
+        #btn-cover {  border: 1px solid skyblue;
             background-color: rgba(0,0,0,0);
             color: skyblue;
             padding: 5px;
@@ -249,4 +250,20 @@ border:  1px solid black; display: flex;
 
 #scrollBar::-webkit-scrollbar-track {
     background: rgba(141, 184, 244, 0.481);  /*스크롤바 뒷 배경 색상*/
+}
+
+/* text scroll-bar */
+#scrollBar1::-webkit-scrollbar {
+    width: 8px;  /* 스크롤바의 너비 */
+}
+
+#scrollBar1::-webkit-scrollbar-thumb {
+    height: 30%; /* 스크롤바의 길이 */
+    background: #c5cfdd; /* 스크롤바의 색상 */
+    
+    border-radius: 10px;
+}
+
+#scrollBar1::-webkit-scrollbar-track {
+    background: rgb(186 186 187 / 48%);  /*스크롤바 뒷 배경 색상*/
 }
