--- a/cyworld/src/main/webapp/resources/css/guestbook.css
+++ b/cyworld/src/main/webapp/resources/css/guestbook.css
@@ -1,121 +1,267 @@
   *{font-family: 'Jua', sans-serif; box-sizing: border-box;}
    /* https://projects.verou.me/css3patterns/#blueprint-grid
            배경 격자무늬 생성  */
-        body { height: 100vh;
-            background-color: rgb(103, 106, 109);
-            background-image: linear-gradient(rgba(255, 255, 255, .3) 3px, transparent 3px),
-                linear-gradient(90deg, rgba(255, 255, 255, .3) 3px, transparent 3px),
-                linear-gradient(rgba(255, 255, 255, .3) 3px, transparent 3px),
-                linear-gradient(90deg, rgba(255, 255, 255, .3) 3px, transparent 3px);
-            background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
-            background-position: -2px -2px, -2px -2px, -1px -1px, -1px -1px;
-  	overflow:hidden;
-  	top:30px;  
-        }
-   /* position */
-   .container { 
-    padding-top: 10px; 
-     height:860px;
-     width: 1800px;
-    margin: auto;
-    border-radius: 100px;
-    display: flex;
-    position: relative;
- 
-   }
-    .left-section { width:30%; background-color: rgb(158, 218, 241); border-radius: 80px; }
-    .right-section { width:70%; background-color: rgb(158, 218, 241); border-radius: 80px; position: relative;  }  
-   
-    .left-dashed-line {width:98%; height: 800px; border-radius: 50px; margin: 30px; border: 3px dashed white; position: relative; left: -20px; border-right: none;}
-    .right-dashed-line {width:99%;  height: 800px; border-radius: 50px; margin: 30px; 
-    border: 3px dashed white; position: relative; right: 32px;
-    border-left: none;}
-    
-    .left-gray-background {width:98%; height: 780px; background-color: rgb(235, 232, 232); border-radius: 50px; margin: 10px; 
-        position: relative;  left: 5px;
-    }
-     .right-gray-background{width:99%;  height: 780px; background-color: rgb(235, 232, 232);  border-radius: 50px; margin: 10px; 
-        position: relative;  right: 13px;
-   } 
+  body {
+	height: 100vh;
+	background-color: rgb(103, 106, 109);
+	background-image: linear-gradient(rgba(255, 255, 255, .3) 3px,
+		transparent 3px), linear-gradient(90deg, rgba(255, 255, 255, .3) 3px,
+		transparent 3px), linear-gradient(rgba(255, 255, 255, .3) 3px,
+		transparent 3px), linear-gradient(90deg, rgba(255, 255, 255, .3) 3px,
+		transparent 3px);
+	background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
+	background-position: -2px -2px, -2px -2px, -1px -1px, -1px -1px;
+	overflow: hidden;
+}
+/* position */
+.container {
+	padding-top: 10px;
+	height: 860px;
+	width: 1800px;
+	margin: auto;
+	border-radius: 100px;
+	display: flex;
+	position: relative;
+	top:30px;
+}
 
-   .left-aside {width:90%; background-color: white; height: 690px; border-radius: 30px; margin: 10px;  position: relative; left: 10px; top: 25px;
-    box-shadow: 10px 10px  10px rgba(0, 0, 0, 0.356);}
-    .right-aside{width:94%; background-color: white; height: 690px; border-radius: 30px; margin: 10px;
-        position: relative;  right: -25px; top:25px; box-shadow: 10px 10px  10px rgba(0, 0, 0, 0.356); z-index: 1;
-        overflow-x: hidden;
-        overflow-y:auto;
-   } 
+.left-section {
+	width: 30%;
+	background-color: rgb(158, 218, 241);
+	border-radius: 80px;
+}
 
-    .left-aside> .item{width: 100px; height: 25px; background: linear-gradient(120deg, rgb(192, 192, 192) 5% , white );border-radius: 50px; position: relative; margin-bottom: 80px; left: 443px; top: 90px; z-index: 1; border: 1px solid rgba(0, 0, 0, 0.178); box-shadow: 10px 10px  20px rgba(0, 0, 0, 0.356); z-index: 2;} 
-   .left-aside> .item2 { top:260px;}  
+.right-section {
+	width: 70%;
+	background-color: rgb(158, 218, 241);
+	border-radius: 80px;
+	position: relative;
+}
 
+.left-dashed-line {
+	width: 98%;
+	height: 800px;
+	border-radius: 50px;
+	margin: 30px;
+	border: 3px dashed white;
+	position: relative;
+	left: -20px;
+	border-right: none;
+}
+
+.right-dashed-line {
+	width: 99%;
+	height: 800px;
+	border-radius: 50px;
+	margin: 30px;
+	border: 3px dashed white;
+	position: relative;
+	right: 32px;
+	border-left: none;
+}
+
+.left-gray-background {
+	width: 98%;
+	height: 780px;
+	background-color: rgb(235, 232, 232);
+	border-radius: 50px;
+	margin: 10px;
+	position: relative;
+	left: 5px;
+}
+
+.right-gray-background {
+	width: 99%;
+	height: 780px;
+	background-color: rgb(235, 232, 232);
+	border-radius: 50px;
+	margin: 10px;
+	position: relative;
+	right: 13px;
+}
+
+.left-aside {
+	width: 90%;
+	background-color: white;
+	height: 690px;
+	border-radius: 30px;
+	margin: 10px;
+	position: relative;
+	left: 10px;
+	top: 25px;
+	box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.356);
+}
+
+.right-aside {
+	width: 94%;
+	background-color: white;
+	height: 690px;
+	border-radius: 30px;
+	margin: 10px;
+	position: relative;
+	right: -25px;
+	top: 20px;
+	box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.356);
+	z-index: 1;
+	overflow: auto;
+}
+
+.left-aside>.item {
+	width: 100px;
+	height: 25px;
+	background: linear-gradient(120deg, rgb(192, 192, 192) 5%, white);
+	border-radius: 50px;
+	position: relative;
+	margin-bottom: 80px;
+	left: 443px;
+	top: 90px;
+	z-index: 1;
+	border: 1px solid rgba(0, 0, 0, 0.178);
+	box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.356);
+	z-index: 2;
+}
+
+.left-aside>.item2 {
+	top: 260px;
+}
    /* content detail */
    /* left content */
-   .todayBanner { position: relative; left: 80px; top:25px; 
-   font-size: 18px; font-weight: bold; word-spacing: 30px;}
-   /* word-spacing: 글자 간격 넓힘 */
-   .todayHere { color:rgb(243, 43, 43)}
-   .todayIcon {position: relative; width: 300px; height: 50px; border: 1px solid rgb(182, 180, 180); left: 80px; top: -410px; color: rgb(140, 208, 248);
-   }
-   .todayIcon img{position: absolute; left: 170px; top:7px;}
-   .todayIconText{ font-size: 18px; font-weight: bold; position: absolute; margin: 10px; left: 15px;}
-   .left-image {position: relative; width: 300px; height: 310px; border: 1px solid black; left: 80px; top:-400px;
-    }
-   .leftImg{ width: 300px; height: 360px;}
-   .left-textarea { overflow: hidden; position: relative; width: 300px; height: 70px; left: 80px; top:-345px; border: none;   font-family: 'Jua', sans-serif;
+   
+.todayBanner {
+	position: relative;
+	left: 80px;
+	top: 25px;
+	font-size: 18px;
+	font-weight: bold;
+	word-spacing: 30px;
 }
-   .myFriend { 
-    position: relative;
-    width: 280px; 
-padding: .8em .5em; 
-border: 1px solid #999;
-font-family: inherit;  
-background: url(./images/arrow.png) no-repeat 95% 50%; 
-border-radius: 0px; 
--webkit-appearance: none; 
--moz-appearance: none;
-appearance: none;
-top:-250px;
-left: 88px;
-font-size: 18px;
+/* word-spacing: 글자 간격 넓힘 */
+.todayHere {
+	color: rgb(243, 43, 43)
 }
-.history { position: relative; top: -345px; left: 70px; }
-.history > img {position: absolute; left: 10px; top: -5px; }
-.history > h3 {position: absolute; width:258px; left: 50px; border-bottom: 1px solid black;}
 
-  
+.todayIcon {
+	position: relative;
+	width: 300px;
+	height: 50px;
+	border: 1px solid rgb(182, 180, 180);
+	left: 80px;
+	top: -410px;
+	color: rgb(140, 208, 248);
+}
+
+.todayIcon img {
+	position: absolute;
+	left: 170px;
+	top: 7px;
+}
+
+.todayIconText {
+	font-size: 18px;
+	font-weight: bold;
+	position: absolute;
+	margin: 10px;
+	left: 15px;
+}
+
+.left-image {
+	position: relative;
+	width: 300px;
+	height: 360px;
+	border: 1px solid black;
+	left: 80px;
+	top: -400px;
+}
+
+
+.leftImg {
+	width: 300px;
+	height: 360px;
+}
+
+.left-textarea {
+	overflow: hidden;
+	position: relative;
+	width: 300px;
+	height: 70px;
+	left: 80px;
+	top: -395px;
+	border: none;
+	font-size:24px;
+}
+
+.myFriend {
+	position: relative;
+	width: 280px;
+	padding: .8em .5em;
+	border: 1px solid #999;
+	font-family: inherit;
+	/* 이미지 경로 설정 방식 */
+	background: url("../images/arrow.png") no-repeat 95% 50%;
+	border-radius: 0px;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	top: -290px;
+	left: 88px;
+	font-size: 18px;
+}
+
+.history {
+	position: relative;
+	top: -380px;
+	left: 70px;
+}
+
+.history>img {
+	position: absolute;
+	left: 10px;
+	top: -5px;
+}
+
+.history>h3 {
+	position: absolute;
+	width: 258px;
+	left: 50px;
+	border-bottom: 1px solid black;
+}
+   
   /* right content */
 .title { position: relative; left: 80px; top:27px; 
-   font-size: 18px; font-weight: bold;  color: skyblue; }
+   font-size: 24px; font-weight: bold;  color: skyblue; }
  
- .fake {width:1100px; height: 65px; background-color: white; margin-left: 10px; z-index: 5; position: fixed ; top:115px;
+ .fake {width:1100px; height: 65px; background-color: white; margin-left: 10px; z-index: 5; position: fixed ; top:152px;
     left:655px;  border-radius: 5px; }
  #main_box { 
- width:1080px; height: 70px; background-color: #79aaee; margin-left: 10px; z-index: 10; position: fixed ; top:140px;
+ width:1080px; height: 70px; background-color: #79aaee; margin-left: 10px; z-index: 10; position: fixed ; top:170px;
     margin-bottom: 40px; left:660px; border-radius: 30px 30px 0 0;
 }
    #main_box > h1 { font-size: 48px; margin-top: 4px; margin-left: 20px;}
  .textWrite { position:absolute; left:960px; top:30px; margin-left: 10px;}
   .contentIntroduce {margin-top:140px; margin-left: 40px; width:1080px; height: 40px; background-color: lightgray;
-    font-size: 23px; display: flex; 
+    font-size: 18px; display: flex; border: 3px solid black; 
 } 
-.contentIntroduce >label {margin-left:15px;}
-.contentRef { border: none; background-color: transparent; font-size: 23px; margin-top:-3px; width:30px;}
+.contentIntroduce >label {margin-left:15px; margin-top:3px;}
+.contentRef { border: none; background-color: transparent; font-size: 18px; margin-top:0px; width:30px;}
 .type_guestbookContentName { color:#74a4e8; margin-top:3px;}
-.type_guestbookRegdate {margin-left:20px; margin-top:0px;}
-.likeHeart {margin-left:360px; margin-top:5px; margin-right:10px;}
+.type_guestbookRegdate {margin-left:20px; margin-top:3px;}
+.likeHeart {margin-left:435px; margin-top:5px; margin-right:10px;}
 #heart { width:30px; height:30px;
  background-image: url(../images/fullHeart.png);
  background-size: cover;
  border: none; 
  background-color: lightgray;
- margin-top: 5px;
+ margin-top: 3px;
  margin-right:10px;
 }
 .GuestContent {margin-top:10px; margin-left: 40px; width:1080px; height: 240px; 
     font-size: 23px; border: 3px solid black;
-   
-     }
+
+    }
+ .guestbookContent { 
+ margin-top:-10px; margin-left: -15px;
+ width:850px; height:205px; border:none;
+ font-size: 25px; line-height:40px; }
   .flip-box {
     width: 1080px;
     height: 240px;
@@ -153,18 +299,17 @@ margin-left:-20px; margin-bottom:-55px;
 .backdelComment {
     background: transparent;
     transform: rotateY(180deg);
-    margin-top:45px; margin-left:280px;
+    margin-top:0px; margin-left:10px;  
 }
 
-
+.backdelComment >.type_guestbookContent > .guestbookContent { margin-top:25px; margin-left:198px;}
   
 .GuestMinimi{width:150px; height: 150px; border: 2px solid black;
 margin-top: 20px; margin-left: 20px;
 }
 .GuestText { margin-left: 220px;
-margin-top:-150px;
+margin-top:-145px; line-height:30px;
 }
-.GuestText { line-height:30px;}
  /* music */
 .mp3 { position:absolute; left:700px; top: 34px; height:25px;}
 .mp3_title { position:absolute; left:790px; top:0px;} 
@@ -203,7 +348,7 @@ margin-top:-150px;
 
 /* tabs */
 .tabs > input {display: none;}
-.tab-btns>label { width: 120px; height: 90px; position: relative; margin-bottom: 5px; background-color:rgb(40, 125, 175); left:1190px; top:-720px;  font-size: 20px; padding-left:15px; text-align: center; padding-top: 25px; border-radius: 0 20px 20px 0;  color: white;
+.tab-btns>label { width: 115px; height: 82px; position: relative; margin-bottom: 5px; background-color:rgb(40, 125, 175); left:1190px; top:-715px;  font-size: 20px; padding-left:15px; text-align: center; padding-top: 25px; border-radius: 0 20px 20px 0;  color: white;
 border:  1px solid black; display: flex;
 }
 .tabs> #tab1:checked ~.tab-btns > #btn1 { background-color: white; color: black;}
@@ -259,4 +404,21 @@ border:  1px solid black; display: flex;
 
 #scrollBar::-webkit-scrollbar-track {
     background: rgba(141, 184, 244, 0.481);  /*스크롤바 뒷 배경 색상*/
+}
+
+
+ /* text scroll-bar */
+#scrollBar1::-webkit-scrollbar {
+     width: 8px;  /* 스크롤바의 너비 */
+}
+
+#scrollBar1::-webkit-scrollbar-thumb {
+    height: 30%; /* 스크롤바의 길이 */
+    background: #c5cfdd; /* 스크롤바의 색상 */
+    
+    border-radius: 10px;
+}
+
+#scrollBar1::-webkit-scrollbar-track {
+    background: rgb(186 186 187 / 48%);  /*스크롤바 뒷 배경 색상*/
 }
