--- a/cyworld/src/main/webapp/resources/css/main.css
+++ b/cyworld/src/main/webapp/resources/css/main.css
@@ -24,6 +24,7 @@ body {
 	border-radius: 100px;
 	display: flex;
 	position: relative;
+	top:30px;
 }
 
 .left-section {
@@ -101,7 +102,7 @@ body {
 	margin: 10px;
 	position: relative;
 	right: -25px;
-	top: 25px;
+	top: 20px;
 	box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.356);
 	z-index: 1;
 	overflow: auto;
@@ -128,9 +129,18 @@ body {
 
 /* content detail */
 /* left content */
-.leftName {
-	color: white;
+#ilchonNum { position:absolute; top:645px; left:100px; font-size:22px; z-index:10;}
+.wantIlchon { position:absolute; top:642px; left:280px; width:100px; font-size:20px; z-index:10;}
+.IlchonAssist {position:absolute; top:642px; left:400px; width:400px; height:150px; background-color:#badeed4d; 
+opacity:0; z-index:10; font-size:20px; line-height:40px; border: 3px solid black; border-radius : 30px;}
+.IlchonAssist > p { margin-left:30px; margin-top:10px; font-weight:bold;}
+.IlchonAssist > p > span { font-size:32px; color:#ff6565; font-weight:bold; }
+.IlchonAssistImg {position:absolute; width:120px; height:80px; left:210px;}
+
+.wantIlchon:hover + .IlchonAssist {
+	opacity:1; 
 }
+
 
 .todayBanner {
 	position: relative;
@@ -172,7 +182,7 @@ body {
 .left-image {
 	position: relative;
 	width: 300px;
-	height: 310px;
+	height: 360px;
 	border: 1px solid black;
 	left: 80px;
 	top: -400px;
@@ -188,13 +198,15 @@ body {
 }
 
 .left-textarea {
-	overflow: hidden;
+	overflow-x: hidden;
+	overflow-y: auto;
 	position: relative;
 	width: 300px;
 	height: 70px;
 	left: 80px;
-	top: -345px;
+	top: -395px;
 	border: none;
+	font-size:24px;
 }
 
 .myFriend {
@@ -209,14 +221,14 @@ body {
 	-webkit-appearance: none;
 	-moz-appearance: none;
 	appearance: none;
-	top: -250px;
+	top: -290px;
 	left: 88px;
 	font-size: 18px;
 }
 
 .history {
 	position: relative;
-	top: -345px;
+	top: -380px;
 	left: 70px;
 }
 
@@ -234,33 +246,34 @@ body {
 }
 
 /* right content */
+.returnMyHome { position:absolute; top:5px; left:1560px; width:120px; height:30px;}
+
 .cy_logout {
-	position: absolute;
-	left: 1570px;
-	top: 10px;
-	left: 1800px;
-	width: 100px;
-	height: 50px;
-	font-size: 25px;
+   position: absolute;
+   left: 1700px;
+   top: 5px;
+   width: 100px;
+   height: 30px;
+   font-size: 18px;
 }
 
 .na_logout {
-	position: absolute;
-	left: 1660px;
-	top: 10px;
+   position: absolute;
+   left: 1700px;
+   top: 5px;
 }
 
 .ka_logout {
-	position: absolute;
-	left: 1790px;
-	top: 10px;
+   position: absolute;
+   left: 1700px;
+   top: 5px;
 }
 
 .title {
 	position: relative;
 	left: 80px;
 	top: 27px;
-	font-size: 18px;
+	font-size: 24px;
 	font-weight: bold;
 	color: skyblue;
 }
@@ -532,6 +545,22 @@ input::placeholder {
 #btn_cover:hover {
 	color: white;
 	background-color: skyblue;
+}
+
+   /* scroll-bar */
+#scrollBar::-webkit-scrollbar {
+    width: 8px;  /* 스크롤바의 너비 */
+}
+
+#scrollBar::-webkit-scrollbar-thumb {
+    height: 30%; /* 스크롤바의 길이 */
+    background: #79aaee; /* 스크롤바의 색상 */
+    
+    border-radius: 10px;
+}
+
+#scrollBar::-webkit-scrollbar-track {
+    background: rgba(141, 184, 244, 0.481);  /*스크롤바 뒷 배경 색상*/
 }
 
 /* 눈 내림 */
