--- a/cyworld/src/main/webapp/resources/css/findId.css
+++ b/cyworld/src/main/webapp/resources/css/findId.css
@@ -45,6 +45,7 @@
     .nameText{ width: 230px; height: 25px;}
     #phone {position: absolute; width: 360px; height: 30px; top:255px; left:110px; }
     .phoneText {width: 230px; height: 25px;}
+       .cancel{position: absolute; width: 40px; font-size:16px; left: 20px; top:10px;}
     #btn-cover {  border: 1px solid skyblue;
             background-color: rgba(0,0,0,0);
             color: skyblue;
@@ -58,3 +59,14 @@
             background-color: skyblue;
             
         }
+        #btn_cover {  border: 1px solid skyblue;
+            background-color: rgba(0,0,0,0);
+            color: skyblue;
+            padding: 5px;
+            border-radius: 5px; font-weight: bold;   }
+#btn_cover:hover{
+            color:white;
+            background-color: skyblue;
+            
+
+        } 
