--- a/cyworld/src/main/webapp/resources/css/kakaoJoin.css
+++ b/cyworld/src/main/webapp/resources/css/kakaoJoin.css
@@ -56,6 +56,7 @@ box-shadow: 10px 10px  10px rgba(0, 0, 0, 0.356);}
 .rAddress { position: absolute; width: 360px; height: 30px; top:450px; left:70px;}
 .rAddress > input {width: 300px; height: 25px; font-size:15px;}
 .join { position: absolute; width: 150px; font-size: 20px; top: 540px; left:150px;}
+.cancel { position:absolute; left:20px; top:10px;}
 #btn-cover {  border: 1px solid skyblue;
             background-color: rgba(0,0,0,0);
             color: skyblue;
