--- a/cyworld/src/main/webapp/resources/css/searchPopUp.css
+++ b/cyworld/src/main/webapp/resources/css/searchPopUp.css
@@ -35,11 +35,11 @@
     /* content */
     .memberBox { margin-top: 70px; margin-left: 20px; margin-right: 20px; position: relative; font-size:20px;
     border: 3px solid black; background-color: #e6f0ffba; border-bottom:none;}
-    .memberMinimi { width:100px; height:100px; border: 2px solid black; border-radius: 30px; display:inline;} 
+    .memberMinimi { width:100px; height:100px; border: 2px solid black; border-radius: 30px; display:inline; } 
     .memberInfo { margin-top: 10px; }
     .wantSearch { margin-top: 10px; border-bottom: 3px solid black; overflow:hidden; }
     
-    .myname { position:relative;  margin-left:10px;}
+    .myname { position:absolute; margin-left:10px; margin-top:40px;}
      .info1 { position:relative; display:block; margin-left:10px; }
     .platform {position:relative; margin-left:10px;} 
 
