--- a/cyworld/src/main/webapp/resources/css/reset.css
+++ b/cyworld/src/main/webapp/resources/css/reset.css
@@ -26,7 +26,9 @@ label:focus,
 select:active,
 select:visited,
 select:hover,
-select:focus  {
+select:focus,
+.img:hover,
+summary:hover{
     text-decoration: none;
     color: inherit;
     cursor: url('../images/HeartCursor2.cur'), auto;
